fix: make SecurityConfig CORS origins configurable via cors.allowed-origins